# balance

./: Cargo.toml  Dioxus.toml  README.md  index.html
.github/workflows/: deploy.yml
assets/: cofid.csv  combined.csv  emoji.csv  emojis.py  names.txt
src/: csv_parse.rs  csvtest.rs  main.rs  nutrition.rs
