[package]
name = "balance"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
csv = "1.3.1"
itertools = "0.13.0"
leptos = { version = "0.7.0", features = ["csr"] }
reqwasm = "0.5.0"
gloo-timers = { version = "0.3", features = ["futures"] }
leptos-use = "0.14.0"
fuzzy-matcher = "*"
regex="1.11.1"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "nutrition"
path = "src/nutrition.rs"
